--- a/src/components-pages/Roadmap/Roadmap.css
+++ b/src/components-pages/Roadmap/Roadmap.css
@@ -1,3 +1,12 @@
+.Roadmap-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-color: var(--secondary-white);
+}
+
 .Roadmap__header {
   background-color: var(--primary-dark-blue);
   color: var(--primary-white);
@@ -20,16 +29,17 @@
   padding: 0;
 }
 
-.Roadmap__header__btn--go-back>.btn__icon {
+.Roadmap__header__btn--go-back > .btn__icon {
   /* filter sets left arrow color to #CDD2EE */
-  filter: brightness(0) saturate(100%) invert(87%) sepia(6%) saturate(906%) hue-rotate(195deg) brightness(96%) contrast(94%);
+  filter: brightness(0) saturate(100%) invert(87%) sepia(6%) saturate(906%)
+    hue-rotate(195deg) brightness(96%) contrast(94%);
 }
 
 .Roadmap__header__btn--add-feedback {
   grid-area: add-feedback;
   color: var(--primary-white);
   border-radius: 0.6em;
-  font-style: normal;
+  padding: 0.66rem 1rem;
   font-weight: 700;
   font-size: 0.8125rem;
   background-color: var(--primary-purple);
@@ -42,15 +52,24 @@
 }
 
 .Roadmap__main {
-  background-color: var(--background-white);
+  flex-grow: 1;
+  height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .Roadmap__container {
   padding: 1.5rem 1.5rem;
-}
-.Roadmap__column {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+}
+.Roadmap__column {
+  height: 0;
+  flex-grow: 1;
+  overflow: auto;
+  display: grid;
   gap: 1rem;
 }
 
